# wireguard-proxy

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  benchmark.sh  test.sh
.ci/: Jenkinsfile  build.sh
ci/: before_deploy.ps1  before_deploy.sh  cert.key  cert.pem  script.sh
src/: asyncmod.rs  error.rs  lib.rs  main.rs  notls.rs  openssl.rs  syncmod.rs
systemd/: client.conf  server.conf  wireguard-proxy@.service
