[package]
name = "wireguard-proxy"
version = "0.1.0"
authors = ["moparisthebest <admin@moparisthebest.com>"]

description = "Tunnel wireguard (UDP) over TCP/TLS."
repository  = "https://code.moparisthebest.com/moparisthebest/wireguard-proxy"
keywords    = ["wireguard", "tunnel", "tcp", "udp", "tls"]

license = "MIT/Apache-2.0"
readme = "README.md"

edition = "2018"

include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE-*",
    "*.md",
]

[features]
default = ["async"]
tls = ["openssl"]
openssl_vendored = ["openssl/vendored"]
verbose = []
async = ["tokio", "tokio-rustls", "ring", "base64"]

[dependencies]
# only for non-async build with TLS support
openssl = { version = "0.10.26", optional = true }
# the rest of these are only required for async build
tokio = { version = "0.2", features = [ "macros", "net", "udp", "io-std", "io-util", "rt-threaded" ], optional = true }
tokio-rustls = { version = "0.14", features = ["dangerous_configuration"], optional = true }
# probably should try to keep ring the exact same version as rustls, same features too
ring = { version = "0.16.11", optional = true }
base64 = { version = "0.12.3", optional = true }
